@@ -8,6 +8,9 @@ EndProject
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "KGEWebPlayer", "..\KGEWebPlayer\KGEWebPlayer.vcxproj", "{8CBBC984-ABFA-471B-B0B1-44C207D78D56}"
 EndProject
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "Renderer_ogl", "..\Renderer_ogl\Renderer_ogl.vcxproj", "{790A8356-123A-4A4A-9BA7-9B7FD1734461}"
+	ProjectSection(ProjectDependencies) = postProject
+		{22DEE7E4-5829-4B77-BEEC-BE152AB0AE5C} = {22DEE7E4-5829-4B77-BEEC-BE152AB0AE5C}
+	EndProjectSection
 EndProject
 Project("{2150E333-8FDC-42A3-9474-1A3956D46DE8}") = "tests", "tests", "{3895B1CA-E0D0-4BE6-9756-C98EE33ACA4A}"
 EndProject
@@ -49,6 +52,10 @@ Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "09FileSystemTest", "..\..\t
 	ProjectSection(ProjectDependencies) = postProject
 		{22DEE7E4-5829-4B77-BEEC-BE152AB0AE5C} = {22DEE7E4-5829-4B77-BEEC-BE152AB0AE5C}
 	EndProjectSection
+EndProject
+Project("{2150E333-8FDC-42A3-9474-1A3956D46DE8}") = "Loaders", "Loaders", "{10268A30-B0DC-47DF-950D-5421E069A053}"
+EndProject
+Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "Loader_OGRE", "..\Loader_OGRE\Loader_OGRE.vcxproj", "{B0D7E3CD-DF08-4461-8A6F-CE49476BFAFE}"
 EndProject
 Global
 	GlobalSection(SolutionConfigurationPlatforms) = preSolution
@@ -326,6 +333,26 @@ Global
 		{ECD043A8-44EA-4BB0-AA37-F62D09BC9A31}.Release|Mixed Platforms.Build.0 = Release|Win32
 		{ECD043A8-44EA-4BB0-AA37-F62D09BC9A31}.Release|Win32.ActiveCfg = Release|Win32
 		{ECD043A8-44EA-4BB0-AA37-F62D09BC9A31}.Release|Win32.Build.0 = Release|Win32
+		{B0D7E3CD-DF08-4461-8A6F-CE49476BFAFE}.Application|Android.ActiveCfg = Release|Win32
+		{B0D7E3CD-DF08-4461-8A6F-CE49476BFAFE}.Application|Mixed Platforms.ActiveCfg = Release|Win32
+		{B0D7E3CD-DF08-4461-8A6F-CE49476BFAFE}.Application|Mixed Platforms.Build.0 = Release|Win32
+		{B0D7E3CD-DF08-4461-8A6F-CE49476BFAFE}.Application|Win32.ActiveCfg = Release|Win32
+		{B0D7E3CD-DF08-4461-8A6F-CE49476BFAFE}.Application|Win32.Build.0 = Release|Win32
+		{B0D7E3CD-DF08-4461-8A6F-CE49476BFAFE}.ApplicationDebug|Android.ActiveCfg = Debug|Win32
+		{B0D7E3CD-DF08-4461-8A6F-CE49476BFAFE}.ApplicationDebug|Mixed Platforms.ActiveCfg = Debug|Win32
+		{B0D7E3CD-DF08-4461-8A6F-CE49476BFAFE}.ApplicationDebug|Mixed Platforms.Build.0 = Debug|Win32
+		{B0D7E3CD-DF08-4461-8A6F-CE49476BFAFE}.ApplicationDebug|Win32.ActiveCfg = Debug|Win32
+		{B0D7E3CD-DF08-4461-8A6F-CE49476BFAFE}.ApplicationDebug|Win32.Build.0 = Debug|Win32
+		{B0D7E3CD-DF08-4461-8A6F-CE49476BFAFE}.Debug|Android.ActiveCfg = Debug|Win32
+		{B0D7E3CD-DF08-4461-8A6F-CE49476BFAFE}.Debug|Mixed Platforms.ActiveCfg = Debug|Win32
+		{B0D7E3CD-DF08-4461-8A6F-CE49476BFAFE}.Debug|Mixed Platforms.Build.0 = Debug|Win32
+		{B0D7E3CD-DF08-4461-8A6F-CE49476BFAFE}.Debug|Win32.ActiveCfg = Debug|Win32
+		{B0D7E3CD-DF08-4461-8A6F-CE49476BFAFE}.Debug|Win32.Build.0 = Debug|Win32
+		{B0D7E3CD-DF08-4461-8A6F-CE49476BFAFE}.Release|Android.ActiveCfg = Release|Win32
+		{B0D7E3CD-DF08-4461-8A6F-CE49476BFAFE}.Release|Mixed Platforms.ActiveCfg = Release|Win32
+		{B0D7E3CD-DF08-4461-8A6F-CE49476BFAFE}.Release|Mixed Platforms.Build.0 = Release|Win32
+		{B0D7E3CD-DF08-4461-8A6F-CE49476BFAFE}.Release|Win32.ActiveCfg = Release|Win32
+		{B0D7E3CD-DF08-4461-8A6F-CE49476BFAFE}.Release|Win32.Build.0 = Release|Win32
 	EndGlobalSection
 	GlobalSection(SolutionProperties) = preSolution
 		HideSolutionNode = FALSE
@@ -342,5 +369,6 @@ Global
 		{49ED7C13-3BC3-460D-B332-B97E82B1FEFE} = {3895B1CA-E0D0-4BE6-9756-C98EE33ACA4A}
 		{ECD043A8-44EA-4BB0-AA37-F62D09BC9A31} = {3895B1CA-E0D0-4BE6-9756-C98EE33ACA4A}
 		{CF1EFDDB-C9DD-471D-8BE6-8559F4740592} = {9A8F9DA9-9446-4147-90DE-F5925EB8FB1E}
+		{B0D7E3CD-DF08-4461-8A6F-CE49476BFAFE} = {10268A30-B0DC-47DF-950D-5421E069A053}
 	EndGlobalSection
 EndGlobal
