@@ -98,9 +98,11 @@
     <ClInclude Include="..\include\KgeThread.h" />
     <ClInclude Include="..\include\KgeUnknown.h" />
     <ClInclude Include="..\include\KgeWindow.h" />
+    <ClInclude Include="..\include\Loader.h" />
     <ClInclude Include="..\include\Logger.h" />
     <ClInclude Include="..\include\math.h" />
     <ClInclude Include="..\include\mem_fun.h" />
+    <ClInclude Include="..\include\MeshLoader.h" />
     <ClInclude Include="..\include\Mouse.h" />
     <ClInclude Include="..\include\msvc_def.h" />
     <ClInclude Include="..\include\os.h" />
@@ -110,6 +112,7 @@
     <ClInclude Include="..\include\Renderer.h" />
     <ClInclude Include="..\include\Resource.h" />
     <ClInclude Include="..\include\ResourceManager.h" />
+    <ClInclude Include="..\include\Stream.h" />
     <ClInclude Include="..\include\String.h" />
     <ClInclude Include="..\include\structs.h" />
     <ClInclude Include="..\KGEmain\Android.h" />
@@ -133,9 +136,11 @@
     <ClCompile Include="..\KGEmain\KgeMutex.cpp" />
     <ClCompile Include="..\KGEmain\KgeNedmalloc.cpp" />
     <ClCompile Include="..\KGEmain\KgeThread.cpp" />
+    <ClCompile Include="..\kgemain\Loader.cpp" />
     <ClCompile Include="..\KGEmain\Logger.cpp" />
     <ClCompile Include="..\KGEmain\PluginManager.cpp" />
     <ClCompile Include="..\KGEmain\Resource.cpp" />
+    <ClCompile Include="..\kgemain\Stream.cpp" />
     <ClCompile Include="..\KGEmain\String.cpp" />
     <ClCompile Include="..\KGEmain\Windows.cpp" />
     <ClCompile Include="..\KGEmain\WinWindow.cpp" />
