@@ -1,0 +1,28 @@
+#ifndef KGE_MESHLOADER_H
+#define KGE_MESHLOADER_H
+
+#include "Loader.h"
+
+namespace kge
+{
+	namespace gfx
+	{
+		class KGE_API MeshLoader : public Loader
+		{
+		public:
+
+			//! Constructor
+			MeshLoader() {}
+
+			//! Destructor
+			virtual ~MeshLoader() {}
+
+		protected:
+
+		}; // MeshLoader
+
+	} // gfx
+
+} // kge
+
+#endif // KGE_MESHLOADER_H
